--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Happy Birthday 🎂</title>
+  <title>Happy Birthdayyy 🎂</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
   <!-- Normalize -->
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-  <h1 class="title">Happy Birthday 🎂</h1>
+  <h1 class="title">Happy Birthdayyy 🎂</h1>
   <p class="subtitle">Make a wish and blow the candles</p>
 
   <div class="candle-count-display">
@@ -32,11 +32,10 @@
   </div>
 
   <div class="letter" id="letter">
-    <h2>For You 💖</h2>
+    <h2>For U </h2>
     <p>
       Happy birthday.  
-      This page is simple, but it’s made for you.  
-      I hope today reminds you that you matter — quietly, deeply, and always.
+      This page is simple, but it’s made for u.
     </p>
   </div>
 
