--- a/index.html
+++ b/index.html
@@ -1,56 +1,81 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Happy Birthday 🎂</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta charset="UTF-8" />
+    <title>Happy Birthdayyyy Brotherr!!! 🎂</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <!-- Normalize -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
+    <!-- Normalize CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 
-  <!-- Your CSS -->
-  <link rel="stylesheet" href="style.css" />
+    <!-- Your CSS -->
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
 
-  <h1 class="title">Happy Birthday 🎂</h1>
-  <p class="subtitle">Click on the cake to add candles, then blow them out!</p>
+    <h1 class="title">Happy Birthdayyy 🎂</h1>
+    <p class="subtitle">Tap the cake to add candles, then blow them with the button!</p>
 
-  <div class="candle-count-display">
-    Candles on the Cake: <span id="candleCount">0</span>
-  </div>
+    <div class="candle-count-display">
+        Candles on the Cake: <span id="candleCount">0</span>
+    </div>
 
-  <!-- Cake -->
-  <div class="cake">
-    <div class="plate"></div>
-    <div class="layer layer-bottom"></div>
-    <div class="layer layer-middle"></div>
-    <div class="layer layer-top"></div>
-    <div class="icing"></div>
-    <div class="drip drip1"></div>
-    <div class="drip drip2"></div>
-    <div class="drip drip3"></div>
-  </div>
+    <!-- Cake -->
+    <div class="cake">
+        <div class="plate"></div>
+        <div class="layer layer-bottom"></div>
+        <div class="layer layer-middle"></div>
+        <div class="layer layer-top"></div>
+        <div class="icing"></div>
+        <div class="drip drip1"></div>
+        <div class="drip drip2"></div>
+        <div class="drip drip3"></div>
+    </div>
 
-  <!-- Hidden Photos -->
-  <div id="photos" style="display:none">
-    <img src="photo1.jpg" alt="Photo 1">
-    <img src="photo2.jpg" alt="Photo 2">
-    <img src="photo3.jpg" alt="Photo 3">
-  </div>
+    <!-- Blow button -->
+    <button id="blowButton">Blow Candles 🕯️</button>
 
-  <!-- Hidden Letter -->
-  <div class="letter" id="letter" style="display:none">
-    <h2>For u 💖</h2>
-    <p>
-      Happy birthday.<br><br>
-      This page isn’t perfect, but it’s made just for you.
-      I hope today reminds you how special you are.
-    </p>
-  </div>
+    <!-- Hidden Photos -->
+    <div id="photos" style="display:none">
+        <img src="photo1.jpg" alt="Photo 1">
+        <img src="photo2.jpg" alt="Photo 2">
+        <img src="photo3.jpg" alt="Photo 3">
+    </div>
 
-  <!-- JavaScript -->
-  <script src="script.js"></script>
+    <!-- Hidden Letter -->
+    <div class="letter" id="letter" style="display:none">
+        <h2>For u 💖</h2>
+        <p>
+            Happy birthdayy.<br><br>
+            Today is yours, and the world seems to shift slightly, like a room just touched by sunlight. You move through life as it moves
+            not because you are unbreakable, not because you bend nothing, but because the currents are there, and you choose to follow them
+            letting them shape you and passing through them with quiet certainty. Life may push, twist, and weigh, yet it flows through you, and you flow with it.
+            There is something breathtaking in that in moving forward simply because forward is what life asks, and in carrying it lightly without pretending it is light.
+            You are not perfect, and that is your perfection. There is a balance in your edges, in the folds that make you uneven, real, alive.
+            Those who care for you do not want a polished version; they want the depth of your existence, the currents you trace in the world,
+            the way you take things deeply, and carry them without boast. The world notices it, sometimes quietly, sometimes more vividly, but it notices.
+            U have this loyalty in you, a steady current that does not shout but moves, like a door left open for someone who needed it, like a quiet lamp glowing
+            in a room that needed light. It is in the way you hold people and moments close, the way you remember and respond,
+            the way you honor what matters. That loyalty, that care, is part of your presence, as real and tangible as the warmth of
+            sunlight on a wall or the calm that fills a space untouched. Passion lives in you, too, in the quiet insistence of attention paid to what matters, to what you love.
+            It may be a profession, a craft, or something fleeting, but it resonates around you. It is not loud, not performative, not meant for recognition.
+            It simply exists, like light reflecting off water, like air held steady in a room, and those who sense it know it is yours.
+            And today, today is for that. It is not just another date on the calendar. It is a chance, rare and fleeting, to let the world notice you,
+            and to let yourself notice you. It is a day to allow yourself to pause, to breathe, to feel that your existence, your flow, your warmth,
+            your depth, is worth acknowledgment. If you do not feel it yet, make it happen. Take the sunlight that is yours.
+            Open the doors you keep closed. Give yourself a moment to exist fully in the space that is yours, because today is for that.
+            Today is for being you, entirely, deeply u. Life will keep moving, of course. Challenges will come, currents will shift, the world will weigh and bend.
+            But today is a moment, a singular chance, to celebrate the fact that you are still here, that you have moved through it all,
+            and that you continue to move forward, not because of strength alone, but because you are alive in it, flowing with it, shaping it 
+            without thought, leaving traces of your presence everywhere. So today, let yourself. Let the day meet you as fully as you meet it.
+            Let the light that is always part of you fill the world around you, even for just this day. Let the quiet celebration be yours,
+            unclaimed by anyone else, because it belongs to you, and to this moment, and to the rare and steady brilliance of your existence.
+            And again, Happy Happy 19th Birthday to u :))).
+
+        </p>
+    </div>
+
+    <!-- JavaScript -->
+    <script src="script.js"></script>
 </body>
 </html>
-
