Revise birthday message and subtitle in index.html
Updated birthday message and improved subtitle.

--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
 </head>
 <body>
 
-    <h1 class="title">Happy Birthdayyy 🎂</h1>
-    <p class="subtitle">Tap the cake to add candles, then blow them with the button!</p>
+    <h1 class="title">Happy Birthdayyy orange, Ms. sculpturer, Ms. some1 w the longest nn, brother, sage, shari and last but not the least fah 🎂</h1>
+    <p class="subtitle">Tap the cake to add candles, then  then don't forget to make a wish before u blow them with the button!</p>
 
     <div class="candle-count-display">
         Candles on the Cake: <span id="candleCount">0</span>
@@ -53,8 +53,8 @@
             There is something breathtaking in that in moving forward simply because forward is what life asks, and in carrying it lightly without pretending it is light.
             You are not perfect, and that is your perfection. There is a balance in your edges, in the folds that make you uneven, real, alive.
             Those who care for you do not want a polished version; they want the depth of your existence, the currents you trace in the world,
-            the way you take things deeply, and carry them without boast. The world notices it, sometimes quietly, sometimes more vividly, but it notices.
-            U have this loyalty in you, a steady current that does not shout but moves, like a door left open for someone who needed it, like a quiet lamp glowing
+            the way you take things deeply, and carry them without boast. The world notices it, sometimes quietly, sometimes more vividly, but it notices. And
+            u have this loyalty in you, a steady current that does not shout but moves, like a door left open for someone who needed it, like a quiet lamp glowing
             in a room that needed light. It is in the way you hold people and moments close, the way you remember and respond,
             the way you honor what matters. That loyalty, that care, is part of your presence, as real and tangible as the warmth of
             sunlight on a wall or the calm that fills a space untouched. Passion lives in you, too, in the quiet insistence of attention paid to what matters, to what you love.
@@ -79,3 +79,4 @@
     <script src="script.js"></script>
 </body>
 </html>
+
