--- a/index.html
+++ b/index.html
@@ -52,16 +52,16 @@
             letting them shape you and passing through them with quiet certainty. Life may push, twist, and weigh, yet it flows through you, and you flow with it.
             There is something breathtaking in that in moving forward simply because forward is what life asks, and in carrying it lightly without pretending it is light.
             You are not perfect, and that is your perfection. There is a balance in your edges, in the folds that make you uneven, real, alive.
-            Those who care for you do not want a polished version; they want the depth of your existence, the currents you trace in the world,
+            Those who care for you do not want a polished version, they want the depth of your existence, the currents you trace in the world,
             the way you take things deeply, and carry them without boast. The world notices it, sometimes quietly, sometimes more vividly, but it notices. And
             u have this loyalty in you, a steady current that does not shout but moves, like a door left open for someone who needed it, like a quiet lamp glowing
             in a room that needed light. It is in the way you hold people and moments close, the way you remember and respond,
             the way you honor what matters. That loyalty, that care, is part of your presence, as real and tangible as the warmth of
             sunlight on a wall or the calm that fills a space untouched. Passion lives in you, too, in the quiet insistence of attention paid to what matters, to what you love.
-            It may be a profession, a craft, or something fleeting, but it resonates around you. It is not loud, not performative, not meant for recognition.
+            It may be a profession, a craft, or something fleeting, but it resonates around you. Its not loud, not performative, not meant for recognition.
             It simply exists, like light reflecting off water, like air held steady in a room, and those who sense it know it is yours.
-            And today, today is for that. It is not just another date on the calendar. It is a chance, rare and fleeting, to let the world notice you,
-            and to let yourself notice you. It is a day to allow yourself to pause, to breathe, to feel that your existence, your flow, your warmth,
+            And today, today is for that. Its not just another date on the calendar. Its a chance, rare and fleeting, to let the world notice you,
+            and to let yourself notice you. Its a day to allow yourself to pause, to breathe, to feel that your existence, your flow, your warmth,
             your depth, is worth acknowledgment. If you do not feel it yet, make it happen. Take the sunlight that is yours.
             Open the doors you keep closed. Give yourself a moment to exist fully in the space that is yours, because today is for that.
             Today is for being you, entirely, deeply u. Life will keep moving, of course. Challenges will come, currents will shift, the world will weigh and bend.
@@ -69,7 +69,7 @@
             and that you continue to move forward, not because of strength alone, but because you are alive in it, flowing with it, shaping it 
             without thought, leaving traces of your presence everywhere. So today, let yourself. Let the day meet you as fully as you meet it.
             Let the light that is always part of you fill the world around you, even for just this day. Let the quiet celebration be yours,
-            unclaimed by anyone else, because it belongs to you, and to this moment, and to the rare and steady brilliance of your existence.
+            unclaimed by anyone else, because it belongs to you, and to this moment, and to the rare and steadiness of your existence.
             And again, Happy Happy 19th Birthday to u :))).
 
         </p>
@@ -79,4 +79,5 @@
     <script src="script.js"></script>
 </body>
 </html>
+
 
